--- a/flashback-backend/pyproject.toml
+++ b/flashback-backend/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "uvicorn[standard] (>=0.34.0,<0.35.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "pillow (>=11.1.0,<12.0.0)",
-    "pydantic (>=2.10.6,<3.0.0)"
+    "pydantic (>=2.10.6,<3.0.0)",
+    "replicate (>=1.0.4,<2.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
