--- a/flashback-frontend/package.json
+++ b/flashback-frontend/package.json
@@ -17,12 +17,14 @@
     "expo-file-system": "~18.0.11",
     "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
